# Wumbot

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  buildWumbot.py  pyproject.toml  requirements.txt  rundevbot.py  setup.cfg  setup.py  wumbolist.JSON  wumbot.py  wumbotLogin.py
Cogs/: amazon.py  bot.py  overwatch.py  reddit.py
bot/: __init__.py  __main__.py  wumbolist.JSON
bot/cogs/: amazon.py  bot.py  mhw.py  overwatch.py  reddit.py  rocketleague.py  wumbopresence.py
bot/models/: ManualCheck.py  NewsParser.py  Overwatch.py  Reddit.py  SpaceX.py  Steam.py
bot/utils/: Constants.py  Helpers.py  SpaceX.py
cogs/: bot.py  mhw.py  overwatch.py  reddit.py  rocketleague.py  steam.py
docs/: conf.py  index.rst
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/cogs/: bot.doctree  index.doctree  mhw.doctree  overwatch.doctree  reddit.doctree
docs/Models/: ManualCheck.rst  NewsParser.rst  Overwatch.rst  Reddit.rst  Steam.rst  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/cogs/: bot.doctree  index.doctree  mhw.doctree  overwatch.doctree  reddit.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/cogs/: bot.rst.txt  reddit.rst.txt
docs/_build/html/cogs/: bot.html  index.html  mhw.html  overwatch.html  reddit.html
docs/cogs/: bot.rst  index.rst  mhw.rst  overwatch.rst  reddit.rst  rocketleague.rst  wumbopresence.rst
docs/utils/: Helpers.rst  index.rst
services/: overwatch.py
